# PunkRecords

./: .gitignore  CLAUDE.md  README.md  config.example.yaml  pyproject.toml
arch/: PunkRecords_Arch.md
docs/: api-outline.md  backend-chat-llm-adapter-design.md  backend-chat-llm-implementation-plan.md  backlog.md  function_plan.md  integration-handbook.md  plan-b-vault-pipeline.md  ui_design.md
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/src/: App.css  App.tsx  brand.ts  config.ts  domains.ts  sidebarNav.ts  timeGreeting.ts
obsidian-plugin/: main.js  manifest.json  styles.css
punkrecords/: main.py
punkrecords/agent/: __init__.py  claude_code.py  opencode.py  registry.py
punkrecords/api/: cli.py  schemas.py  state.py
punkrecords/graph/: __init__.py  builder.py  entities.py
punkrecords/vaults/: __init__.py  base.py  index_vault.py  material_vault.py
src/: config.py  main.py
src/agent/: base.py  codex.py
src/api/: __init__.py  agents_registry.py  app.py  auth.py  chat_materials.py  chat_profiles.py  chat_service.py  cli.py  deps.py  domain_store.py  domains_data.py  errors.py  schemas.py
src/graph/: entities.py
src/ingest/: __init__.py  graph_merge.py  service.py  wiki_merge.py
src/llm/: __init__.py  base.py  registry.py  types.py
src/vaults/: __init__.py  factory.py  index_vault.py  material_vault.py
tests/agent/: test_base.py  test_claude_code.py  test_codex.py  test_opencode.py  test_registry.py
tests/api/: test_chat_materials.py  test_domains_crud.py  test_ingest_api.py  (+1 more)
(+24 files in other folders)
